# Ramone

./: .gitignore  CMakeLists.txt  README.md  demo.sh.save  setavic.sh  setemu.sh  setin.sh  setup_vcan.sh  setvcan.sh
Code/: CMakeLists.txt  main.cpp  tryout.cpp
Code/CanBuffer/include/: canBuffer.hpp
Code/CanBuffer/src/: canBuffer.cpp
Code/Emulator/: CMakeLists.txt  Emulator.cpp  emulator  emulator.cpp  emulator.hpp  main.cpp  testEmulator.cpp
Code/Emulator/include/: PhysicalConst.hpp  VehicleParameters.hpp  emu.hpp  emulator.hpp  engine.hpp  trans.hpp
Code/Emulator/src/: EmulatorSource.cpp  emu.cpp  emulator.cpp  testEmulator.cpp
Code/Emulator_debugging/: .gitignore  main.cpp
Code/Emulator_debugging/include/: emu.hpp  engine.hpp  trans.hpp
Code/Emulator_debugging/src/: emu.cpp  trans.cpp
Code/InputHandler/: CMakeLists.txt  InputHandler.cpp  inputhandler  main.cpp
Code/InputHandler/include/: InputHandler.hpp  NcKeyBindings.hpp
Code/InputHandler/src/: InputHandler.cpp  InputHandlerSource.cpp
Code/avic/: CMakeLists.txt  main.cpp
Code/avic/include/: cluster_updater.h  your_stuff.h
Code/avic/src/: your_stuff.cpp
Code/lib/libcanio/: CMakeLists.txt
Code/lib/libcanio/include/canio/: can_common.h
Code/lib/libcanio/src/: canio.cpp
Code/libSocketCan/: CMakeLists.txt
Code/libSocketCan/include/: socketcan.hpp  socketcan_cpp.h
Code/libSocketCan/src/: socketcan.cpp  socketcan_cpp.cpp
Documents/: WayOfWorking.txt
Requirements/: ControlFlowDiagram.drawio  EmulatorClassDiagram.drawio  EmulatorControlFlow.drawio  FirstBrainstorm.drawio  Input Handler.drawio  test.drawio
Scripts/: initializeProgram.sh  runGTest.sh  setvcan.sh
Test/: CMakeLists.txt  testEmulator.cpp  testInputHandler.cpp
TestCluster/ICSim-master/: .setup_vcan.sh.swp  README.md  controls  icsim  icsim.c  mono_crash.d4716fb0.0.json  setup_vcan.sh
avic/: CMakeLists.txt  Dependecy.txt  main.cpp
avic/src/: your_stuff.cpp
